--- a/style.css
+++ b/style.css
@@ -34,6 +34,18 @@ body {
 }
 
 /* Maksim Slavin - Start: Override theme default classes */
+@media (min-width: 768px) {
+    .navbar-container.container {
+        width: 100%;
+    }
+}
+
+@media (min-width: 992px) {
+    .page-template-service-template .healthcare-services .col-md-4 {
+        min-height: 200px;
+    }
+}
+
 .header_section .container {
     width: 100%;
     height: 156px;
